--- a/website/mainSearchPage/main.css
+++ b/website/mainSearchPage/main.css
@@ -3,22 +3,16 @@
  */
 
 /* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
+a, a:focus, a:hover {
+    color: #fff;
 }
 
 /* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
+.btn-default, .btn-default:hover, .btn-default:focus {
+    color: #333;
+    background-color: #fff;
+    border: 1px solid #fff;
 }
-
 
 /*
  * Base structure
@@ -32,7 +26,6 @@ body {
 body {
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -57,53 +50,6 @@ body {
 .inner {
   padding: 30px;
 }
-
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;  /* change the x-position of uppper right coner */
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
-
 
 /*
  * Cover
@@ -173,25 +119,23 @@ body {
     /*transition: width 0.4s ease-in-out;*/
 /*}*/
 
- /*When the input field gets focus, change its width to 100%*/
+/*When the input field gets focus, change its width to 100%*/
+input[name=search] {
+    background-image: url('searchicon.png'); /** TODO: add a image here*/
+}
 input[type=text] {
     width: 130px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
     background-color: white;
-    background-image: url('searchicon.png'); /** TODO: add a image here*/
-    background-position: 10px 10px;
+    background-position: 5px 5px;
     background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
+    padding: 12px 20px 12px 35px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
 
 input[type=text]:focus {
-     width: 10%;
- }
+    width: 100%;
+}
 
 .search {
     margin-top: -0%;
