--- a/website/mainSearchPage/main.css
+++ b/website/mainSearchPage/main.css
@@ -1,11 +1,5 @@
-/*
- * Globals
- */
-
-/* Links */
-a, a:focus, a:hover {
-    color: #fff;
-}
+/* GLOBAL STYLES
+-------------------------------------------------- */
 
 /* Custom default button */
 .btn-default, .btn-default:hover, .btn-default:focus {
@@ -14,114 +8,39 @@ a, a:focus, a:hover {
     border: 1px solid #fff;
 }
 
-/*
- * Base structure
- */
-
-html,
 body {
-    height: 100%;
-    background-color: #333;
-}
-body {
-  color: #fff;
-  text-align: center;
+    color: #5a5a5a;
+    padding-bottom: 40px;
+    text-align: center;
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
 }
 
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
 }
 
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
 }
 
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 1000px;
-  }
-}
-
-
-/*
- * Search Bar
- */
-
-/*.input[type=text] {*/
-    /*width: 130px;*/
-    /*-webkit-transition: width 0.4s ease-in-out;*/
-    /*transition: width 0.4s ease-in-out;*/
-/*}*/
-
-/*When the input field gets focus, change its width to 100%*/
 input[name=search] {
-    background-image: url('searchicon.png'); /** TODO: add a image here*/
+    background-image: url('icon/searchicon.png'); /** TODO: add a image here*/
 }
 input[type=text] {
     width: 130px;
@@ -137,9 +56,6 @@ input[type=text]:focus {
     width: 100%;
 }
 
-.search {
-    margin-top: -0%;
-}
 .search .form-section{
     background:rgba(0,0,0,0.6);
     border: 2px solid #414141;
