--- a/website/mainSearchPage/main.css
+++ b/website/mainSearchPage/main.css
@@ -3,8 +3,8 @@
 
 /* Custom default button */
 .btn-default, .btn-default:hover, .btn-default:focus {
-    color: #333;
-    background-color: #fff;
+    color: #fbfff8;
+    background-color: #74b8e7;
     border: 1px solid #fff;
 }
 
@@ -13,11 +13,35 @@ body {
     padding-bottom: 40px;
     text-align: center;
 }
-
-/* Carousel base class */
+/*--------------------------------------------------  Carousel -------------------------------------------------- */
+/* Carousel base class
+ controls the rolling image side bar*/
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
+    opacity: 0.9;
+    height: 700px;
+    margin-bottom: 60px;
+}
+
+.navbar {
+    background-color: #fbfff8;
+    opacity: 0.7;
+    filter: alpha(opacity=100);
+}
+
+.navbar-brand {
+    color: #fbfff8;
+    opacity: 1;
+}
+
+.nav-start {
+    color: #fbfff8;
+    opacity: 1;
+    text-align: right;
+    margin-top: 15px;
+    /*margin-left: 50%;*/
+    /*margin-right: 10%;*/
+    /*position: inherit;*/
+    /*margin: 1%;*/
 }
 
 /* Since positioning the image, we need to help out the caption */
@@ -27,17 +51,19 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
-  background-color: #777;
+  height: 700px;
+  background-color: #000000;
 }
 
+/* changes the index page, background image*/
 .carousel-inner > .item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 700px;
 }
+/*--------------------------------------------------  Carousel Done ------------------------------------------------ */
 
 input[name=search] {
     background-image: url('icon/searchicon.png'); /** TODO: add a image here*/
@@ -55,10 +81,11 @@ input[type=text] {
 input[type=text]:focus {
     width: 100%;
 }
-
+/*search bar*/
 .search .form-section{
-    background:rgba(0,0,0,0.6);
-    border: 2px solid #414141;
+    /*background: rgba(193, 231, 228, 0.6);*/
+    /*border: 2px solid #cee9ee;*/
+    /*opacity: 0.0;*/
     border-radius: 5px;
-    padding: 10px;
+    padding: 1px;
 }
