--- a/website/mainSearchPage/register.css
+++ b/website/mainSearchPage/register.css
@@ -4,19 +4,12 @@ body {
   background-color: #eee;
 }
 
-.form-signin {
+.form-register {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
+.form-register .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -25,16 +18,20 @@ body {
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+.form-register .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-register input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
+.form-register input[type="password"] {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.form-register button[type="submit"] {
+    margin-top: 10px;
+}
+
