--- a/website/mainSearchPage/tourist_registeration.css
+++ b/website/mainSearchPage/tourist_registeration.css
@@ -5,10 +5,19 @@ body {
 }
 
 .form-register {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
+    width: 800px;
+    padding: 15px;
+    margin: 0 auto;
 }
+
+.form-register h2 {
+    margin-bottom: 20px;
+}
+
+.form-register label {
+    margin-top: 5px;
+}
+
 .form-register .form-control {
   position: relative;
   height: auto;
@@ -17,21 +26,14 @@ body {
           box-sizing: border-box;
   padding: 10px;
   font-size: 16px;
+  margin-bottom: 10px;
 }
+
 .form-register .form-control:focus {
-  z-index: 2;
-}
-.form-register input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-register input[type="password"] {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+    z-index: 2;
 }
 
 .form-register button[type="submit"] {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
