--- a/website/mainSearchPage/registration.css
+++ b/website/mainSearchPage/registration.css
@@ -4,6 +4,11 @@ body {
   background-color: #eee;
 }
 
+label.required:after {
+  content:"*";
+  color:red;
+}
+
 .form-register {
     width: 800px;
     padding: 15px;
